<resources>
    <!-- config -->
    <string name="app_name">Adopt a pet</string>
    <string name="facebook_app_id">1685597175088590</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_perfil">My profile</string>
    <string name="nav_adotar">Adopt a pet</string>
    <string name="nav_cadastrar">Register a Pet</string>
    <string name="nav_perdi_pet">Lost a Pet</string>
    <string name="nav_abrigos">Shelter</string>
    <string name="nav_cadastro_abrigo">Register a Shelter</string>
    <string name="nav_configuracoes">Settings</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>My Pets</item>
        <item>Register a Pet</item>
        <item>Shelter</item>
        <item>Register a Shelter</item>
        <item>Search shelter</item>
        <item>Logout</item>
    </string-array>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>

    <!-- Activity_main_drawer -->
    <string name="item_home">Home</string>
    <string name="item_meuspets">My Pets</string>
    <string name="item_cadastrar">Register a Pet</string>
    <string name="item_perdi_pet">Lost a Pet</string>
    <string name="item_abrigos">Shelter</string>
    <string name="item_cadastro_abrigo">Register a Shelter</string>
    <string name="item_buscar_abrigo">Find Shelter</string>
    <string name="item_sair">Exit</string>

    <!-- Login -->
    <string name="Cadastrar">Register</string>
    <string name="face_login_error">Error. Facebook retrieving data.</string>
    <string name="ou">OR</string>
    <string name="entrar">Login</string>
    <string name="email_ou_senha_invalidos">Fill e-mail and password</string>
    <string name="dados_invalidos">Wrong E-mail and/or password</string>

    <!-- Activity_register -->
    <string name="actionBar_title">User registration</string>
    <string name="date_selected"></string>
    <string name="nome_cadastro">Name</string>
    <string name="senha_cadastro">Password</string>
    <string name="senha_confirmacao">Confirm your password</string>
    <string name="email">E-mail</string>
    <string name="telefone_cadastro">Phone</string>
    <string name="data_nascimento">Date of birth</string>
    <string name="Add_photo">Add a photo</string>
    <string name="sexo_feminino">Female</string>
    <string name="sexo_masculino">Male</string>
    <string name="select">Select</string>
    <string name="estado">State</string>
    <string name="cidade">City</string>

    <string name="nome_vazio">Fill Name</string>
    <string name="email_vazio">Fill E-mail</string>
    <string name="telefone_vazio">Fill Phone</string>
    <string name="datanascimento_vazio">Fill Birthday</string>
    <string name="senha_vazio">Fill Password</string>
    <string name="confirma_senha_vazio">Confirm Password</string>
    <string name="confirma_senha_errado">Different Passwords</string>
    <string name="estado_vazio">Fill state</string>
    <string name="cidade_vazio">Fill city</string>
    <string name="sexo_vazio">Select gender</string>

    <string name="erro_registrar">Ops, something wrong. Try again later.</string>
    <string name="carregando">Loading...</string>

    <!-- Activity Profile Pet -->
    <string name="actionBarProfilePet_title">Pet Profile</string>
    <string name="txtView_queroadotar">I want to adopt!</string>

    <!-- Cadastrar um pet -->
    <string name="Especie_pet">Select the kind of Pet</string>
    <string name="Nome_Pet">Pet Name</string>
    <string name="Idade_pet">Age</string>
    <string name="Porte_pequeno">Small</string>
    <string name="Porte_medio">Medium</string>
    <string name="Porte_grande">Large</string>
    <string name="Raca_pet">Enter the race of Pet</string>
    <string name="Descricao_pet">Description</string>
    <string name="btn_salvar">Save</string>
    <string name="btn_registrar">Register</string>
    <string name="nome_abrigo">Shelter name</string>
    <string name="add_imagem_abrigo">Add a photo</string>
    <string name="endereco_abrigo">Address of shelter</string>
    <string name="txt_email">Your email</string>
    <string name="ParaAdocao">For adoption</string>
    <string name="Perdido">Lost</string>

    <string name="status_vazio">Select a option</string>
    <string name="raca_vazio">Fill Breed</string>
    <string name="porte_vazio">Fill</string>
    <string name="nomepet_vazio">Fill Name</string>
    <string name="descricao_vazio">Describe the pet</string>

    <string name="cadastro_pet_sucesso">Pet registered</string>


    <!-- Tela de Perfil do Pet -->
    <string name="txtView_nome_perfil_pet">Toddy</string>
    <string name="txtView_descricao_perfil_pet">This is the Toddy! Two years old, is docile, get along with everybody, have a ball at the navel, cut tail and has microchip. Weighs between 4 and 5 kg.</string>
    <string name="txtView_sexoPet">Sex: Male</string>
    <string name="txtView_idadePet">Age: 2 years</string>
    <string name="txtView_portePet">Size: Small</string>
    <string name="txtView_racaPet">Breed: Yorkshire</string>
    <string name="txtView_telefone">(81) 98888-8888</string>
    <string name="txtView_email">queroadotar@adoteumpet.com</string>
    <string name="InformacoesCadastrais">"Registered 10/12/2016 by @CaroolSantos for Adoption."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_profile_pet">Pet Details</string>

    <!-- Tela de Filtros -->
    <string name="select_portepet">Select the pet size</string>
    <string name="select_sexopet">Select the gender of the pet</string>
    <string name="select_localizacao">Animals around</string>
    <string name="btn_filtrar"> Filter</string>
    <string name="especie_cachorro">Dog</string>
    <string name="especie_gato">Cat</string>
    <string name="especie_passaro">Bird</string>
    <string name="porte_pequeno">Small</string>
    <string name="porte_medio">Medium</string>
    <string name="porte_grande">Large</string>
    <string name="genero_femea">Female</string>
    <string name="genero_macho">Male</string>
    <string name="nao_restringir">Don`t restrict</string>
    <string name="localizacao_cidade">Your city</string>
    <string name="localizacao_estado">Seu estado</string>
    <string name="title_activity_filter">Filter</string>

    <!-- RegisterShelterFragment -->
    <string name="abrigo_nome_vazio">Fill name</string>
    <string name="abrigo_telefone_vazio">Fill phone</string>
    <string name="abrigo_email_vazio">Fill e-mail</string>
    <string name="abrigo_endereco_vazio">Fill address</string>
    <string name="abrigo_cadastro_sucesso">Shelter registered</string>

    <!-- HomeFragment-->
    <string name="para_adocao">To adopt</string>
    <string name="perdido">lost Pet</string>

</resources>
