<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ufrpe.carolina.adoteumpet.fragment.ProfileFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/wallpaper" />

            <ImageButton
                android:id="@+id/pet_profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:background="@drawable/profile_circular_border_imageview"
                android:elevation="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/toddy" />

            <RelativeLayout
                android:id="@+id/pet_profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/share_pet"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_toLeftOf="@+id/favorite_pet"
                    android:clickable="true"
                    android:src="@drawable/icon_share" />

                <ImageView
                    android:id="@+id/favorite_pet"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/icon_favorite" />


                <TextView
                    android:id="@+id/pet_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:text="@string/txtView_nome_perfil_pet"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pet_profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:background="#fff">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/InformacoesCadastrais"
                    android:id="@+id/Txt_InformacoesCadastrais"
                    android:layout_margin="5dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="20dp"
                    android:id="@+id/profile_pet_description"
                    android:text="@string/txtView_descricao_perfil_pet" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_marginLeft="24dp"
                        android:text="@string/txtView_sexoPet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_sexopet"
                        android:layout_weight="1" />

                    <TextView
                        android:text="@string/txtView_idadePet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_idadepet"
                        android:layout_weight="1" />

                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="24dp">


                    <TextView
                        android:text="@string/txtView_portePet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_portepet"
                        android:layout_weight="1"/>

                    <TextView
                        android:text="@string/txtView_racaPet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_racapet"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="24dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/icon_phone"
                        android:id="@+id/imgView_iconPhone"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/txtView_telefone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_telefone" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="24dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/icon_mail"
                        android:id="@+id/imgView_iconMail"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/txtView_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_email" />
                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayout">

        <Button
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/btn_queroadotar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/txtView_queroadotar"
            android:drawableLeft="@drawable/ic_pets_white_24dp"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            />
    </RelativeLayout>

</RelativeLayout>
